--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -2,6 +2,7 @@
   padding-top: 80px;
   display: flex;
   justify-content: center;
+  height: 350px;
 
     & > .background{
       position: absolute;
