--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -9,6 +9,7 @@
   height: 60px;
   border-bottom: 1px solid $line;
   background-color: white;
+  z-index: 9999;
 
   display: flex;
   align-items: center;
@@ -39,13 +40,5 @@
     right: 0px;
     top: 0px;
     margin: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    & > .icon {
-      height: 20px;
-      margin-left: 15px;
-    }
   }
 }
