--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,16 +1,75 @@
 @import '_reset.scss';
 @import '_colors.scss';
+@import '_socials.scss';
+@import '_sections.scss';
 
 @import '_navigation.scss';
 @import '_header.scss';
 
 @font-face {
     font-family: "Butler";
-    src: url(assets/butler_regular_webfont.woff2);
+    src: url(assets/butler_regular-webfont.woff2);
 }
 
 body {
   display: flex;
   flex-direction: column;
   font-family: "Butler", "Times New Roman";
+  display: flex;
+  align-items: center;
+  overflow-x: hidden;
+}
+
+.spacer {
+  height: 30px;
+  &.h-10{ height: 10px; }
+  &.h-40{ height: 40px; }
+  &.h-80{ height: 80px; }
+}
+
+a{
+  color: inherit;
+  text-decoration: inherit;
+
+  &:hover{
+    text-decoration: underline;
+  }
+}
+
+.main-content{
+  max-width: 900px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1{
+  font-size: 64px;
+  font-weight: bold;
+  background-color: $base;
+  display: inline-block;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 55px;
+  border-bottom: 1px solid black;
+}
+
+h2{
+
+}
+
+h3{
+  font-size: 19px;
+  font-weight: bold;
+  max-width: 325px;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.info{
+  max-width: 380px;
+  font-size: 17px;
+  line-height: 26px;
+  text-align: center;
 }
