--- a/docs/main.css
+++ b/docs/main.css
@@ -42,9 +42,9 @@ table {
   .socials > .icon {
     height: 20px;
     margin-left: 15px; }
-  .socials.big > .icon {
+  .socials.big .icon {
     height: 40px;
-    margin-left: 25px; }
+    margin-left: 15px; }
 
 .button {
   height: 32px;
@@ -65,11 +65,15 @@ section {
 .line {
   width: 100%;
   height: 1px;
-  border-bottom: 1px solid #F4F4F4; }
+  border-bottom: 1px solid #E0E0E0; }
 
 #who-i-am > .photo {
   width: 150px;
   margin-bottom: -20px; }
+
+@media (max-width: 700px) {
+  .left {
+    display: none !important; } }
 
 #experience {
   width: 100%;
@@ -82,7 +86,8 @@ section {
   height: 800px;
   max-width: 1300px;
   display: flex;
-  overflow: hidden; }
+  overflow: hidden;
+  border-bottom: 1px solid #E0E0E0; }
   .project > .left {
     display: flex;
     height: 100%;
@@ -111,6 +116,11 @@ section {
         background: white;
         margin-left: -14px;
         margin-right: -20px; }
+  @media (max-width: 1300px) {
+    .project .angle.odd.right {
+      display: none; }
+    .project .angle.even.left {
+      display: none; } }
   .project > .right {
     overflow: hidden;
     height: 100%;
@@ -146,6 +156,20 @@ section {
     text-align: left;
     margin-top: 20px; }
 
+#experience {
+  border-bottom: 1px solid #E0E0E0; }
+
+#lets-talk {
+  width: 100%;
+  padding-top: 80px;
+  border-bottom: 1px solid #E0E0E0; }
+
+#footer {
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
 .navigation-spacer {
   height: 60px; }
 
@@ -155,7 +179,7 @@ section {
   left: 0;
   width: 100%;
   height: 60px;
-  border-bottom: 1px solid #F4F4F4;
+  border-bottom: 1px solid #E0E0E0;
   background-color: white;
   z-index: 9999;
   display: flex;
