--- a/src/styles/_socials.scss
+++ b/src/styles/_socials.scss
@@ -8,9 +8,9 @@
     margin-left: 15px;
   }
 
-  &.big > .icon {
+  &.big .icon {
     height: 40px;
-    margin-left: 25px;
+    margin-left: 15px;
   }
 }
 
