--- a/src/components/footer.pug
+++ b/src/components/footer.pug
@@ -1,2 +1,7 @@
 #footer
-  img(src='assets/love-nature.svg')
+	img.food(src='assets/food.svg')
+	.title Let's Talk
+	.subtitle “Ask, share or just say hi”
+	#lets-talk.button Say hi	
+	img.tree(src='assets/tree.svg')
+	img.bench(src='assets/tree-and-bench.svg')
