--- a/src/index.pug
+++ b/src/index.pug
@@ -3,33 +3,36 @@ head
   meta(name="viewport" content="width=device-width, initial-scale=1")
 body
   include components/navigation.pug
-
-  .header
-    .background
-      .left
-      img.center(src='assets/header.png')
-      .right
-    img.name(src='assets/header-name.png')
-
-
-  section#who-i-am
-    .spacer-h-40
-    img.photo(src='assets/photo-me.png')
-    h1 Who I am.
-    h3.subtitle “An combination of determination, creativity and curiosity”
-    .spacer.h-40
-    .info Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
-    .spacer
-    .socials.big
-      each item in socials
-        a.icon(href=item.url)
-          img.icon(src=item.icon)
-    .spacer
-    .button Download CV
-    .spacer.h-80
-
-  section#experience
-    include components/projects.pug
-
-  include components/talk.pug
+  include components/header.pug
+  include components/projects.pug
   include components/footer.pug
+
+  //- .header
+  //-   .background
+  //-     .left
+  //-     img.center(src='assets/header.png')
+  //-     .right
+  //-   img.name(src='assets/header-name.png')
+
+
+  //- section#who-i-am
+  //-   .spacer-h-40
+  //-   img.photo(src='assets/photo-me.png')
+  //-   h1 Who I am.
+  //-   h3.subtitle “An combination of determination, creativity and curiosity”
+  //-   .spacer.h-40
+  //-   .info Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
+  //-   .spacer
+  //-   .socials.big
+  //-     each item in socials
+  //-       a.icon(href=item.url)
+  //-         img.icon(src=item.icon)
+  //-   .spacer
+  //-   .button Download CV
+  //-   .spacer.h-80
+
+  //- section#experience
+  //-   include components/projects.pug
+
+  //- include components/talk.pug
+  //- include components/footer.pug
