--- a/docs/components/footer.html
+++ b/docs/components/footer.html
@@ -1,1 +1,1 @@
-<div id="footer"><img src="assets/love-nature.svg"/></div>
+<div id="footer"><img class="food" src="assets/food.svg"/><div class="title">Let's Talk</div><div class="subtitle">“Ask, share or just say hi”</div><div class="button" id="lets-talk">Say hi	</div><img class="tree" src="assets/tree.svg"/><img class="bench" src="assets/tree-and-bench.svg"/></div>
