--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -5,9 +5,9 @@
   position: fixed;
   top: 0;
   left: 0;
+  right: 0;
   width: 100%;
   height: 60px;
-  border-bottom: 1px solid $line;
   background-color: white;
   z-index: 9999;
 
@@ -15,7 +15,7 @@
   align-items: center;
   justify-content: center;
 
-  & > .icon {
+  & .wordmark {
     position: absolute;
     left: 0px;
     top: 0px;
@@ -27,18 +27,55 @@
     align-items: center;
     justify-content: center;
     flex-direction: row;
+    height: 60px;
+    width: 100%;
+    background-color: white;
 
     & > .item {
       font-size: 16px;
       font-weight: bold;
       margin-right: 20px;
+      padding: 5px;
+
+      &:hover{
+        background-color: $base;
+      }
     }
   }
 
   & > .socials {
     position: absolute;
-    right: 0px;
+    right: 20px;
     top: 0px;
-    margin: 20px;
+    display: flex;
+    align-items: center;
+    height: 60px;
+
+    a.icon{
+      margin-right: 15px;
+    }
   }
+
+   @media only screen and (max-width: 600px){
+      &{
+        left: inherit;
+      }
+      .socials{
+        left: 0px;
+        background-color: $base;
+        justify-content: center;
+      }
+      .wordmark{
+        top: 60px;
+      }
+      .menu{
+        margin-top: 120px;
+      }
+    }
+
+    @media only screen and (max-width: 430px){
+      .wordmark{
+        display: none;
+      }
+    }
 }
