--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,8 @@
 @import '_reset.scss';
 @import '_colors.scss';
-@import '_socials.scss';
+@import '_projects.scss';
 @import '_sections.scss';
+@import '_footer.scss';
 
 @import '_navigation.scss';
 @import '_header.scss';
