[V2] Improve images, support iphone 5s, add email to button footer

--- a/src/components/footer.pug
+++ b/src/components/footer.pug
@@ -2,6 +2,6 @@
 	img.food(src='assets/food.svg')
 	.title Let's Talk
 	.subtitle “Ask, share or just say hi”
-	#lets-talk.button Say hi	
+	a#lets-talk.button(href='mailto:dannyvanderjagt@gmail.com') Say hi	
 	img.tree(src='assets/tree.svg')
 	img.bench(src='assets/tree-and-bench.svg')
