--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -4,7 +4,7 @@
 	.words-container.mobile
 		.words-row
 			.word front-end & react-native developer
-			.word phychology	
+			.word psychology	
 			.word nutrition	
 			.word startups
 			.word ideation	
@@ -20,13 +20,13 @@
 		.words-row
 			.word windsurfing
 			.word design
-			.word detemination
+			.word determination
 			.word technology
 			.word mentoring
 			.word startups
 		.words-row
 			.word react-native developer
-			.word mountainbiking
+			.word mountain biking
 			.word highly sensitive person
 			.word teaching
 			.word listening
