--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -64,6 +64,7 @@
         left: 0px;
         background-color: $base;
         justify-content: center;
+        right: 0px;
       }
       .wordmark{
         top: 60px;
